# Slag-DearImGui

./: CMakeLists.txt  LICENSE.txt  README.md
example/: SlagImGuiExample.cpp
src/: imgui.frag.glsl  imgui.vert.glsl
src/slagIMGUI/: imgui_impl_slag.cpp  imgui_impl_slag.h
